hphp/test/zend/bad/ext/ldap/tests/ldap_get_attributes_error.php
<?php
require "connect.inc";

$link = ldap_connect($host, $port);
var_dump(ldap_get_attributes($link));
var_dump(ldap_get_attributes($link, $link));
?>
===DONE===